# tiptap

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake-multi-platform.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_results_N_up_to_64.ods  combine_extensive.sh  extensive_benchmark.cpp  extensive_benchmark.cpp.head  extensive_benchmark.cpp.tail  generate_extensive_benchmark.py  parse_benchmark_xml.py
examples/: CMakeLists.txt  constexpr.cpp  encryptedcounter.cpp  hellobigworld.cpp  helloworld.cpp
include/tiptap/: bignum.h  integerselect.h  lfsr.h  lfsr_big.h  lfsr_coefficients.h  lfsr_small.h  lfsr_vectorclass.h
scripts/: local_ci.sh
src/: CMakeLists.txt  bignum.cpp
tests/: CMakeLists.txt  test_bignum.cpp  test_integerselect.cpp  test_large_lfsr.cpp  test_lfsr_coefficients.cpp  test_small_lfsr.cpp  test_vectorclass_lfsr.cpp
